Changes GameController to get autogen clients working well again.
